add features selection

--- a/process.ipynb
+++ b/process.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -79,16 +79,16 @@
      "output_type": "stream",
      "text": [
       "torch.Size([32, 0])\n",
-      "torch.Size([32, 22])\n",
+      "torch.Size([32, 16])\n",
       "torch.Size([32])\n"
      ]
     }
    ],
    "source": [
-    "train_dataset = CSVMetadataDataset(csv_file=\"./data/fos/vaynen_train_fos.csv\", root_dir=root_folder)\n",
+    "train_dataset = CSVMetadataDataset(csv_file=\"./data/vip/vaynen_train_vip_new.csv\", root_dir=root_folder, md=False)\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=4)   \n",
     "\n",
-    "test_dataset = CSVMetadataDataset(csv_file=\"./data/fos/vaynen_test_fos.csv\", root_dir=root_folder)\n",
+    "test_dataset = CSVMetadataDataset(csv_file=\"./data/vip/vaynen_test_vip_new.csv\", root_dir=root_folder, md=False)\n",
     "test_dataloader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=4)\n",
     "\n",
     "# Check one batch\n",
@@ -108,9 +108,9 @@
      "output_type": "stream",
      "text": [
       "SimpleNeuralNetwork(\n",
-      "  (fc1): Linear(in_features=22, out_features=64, bias=True)\n",
+      "  (fc1): Linear(in_features=16, out_features=64, bias=True)\n",
       "  (relu): ReLU()\n",
-      "  (fc2): Linear(in_features=64, out_features=3, bias=True)\n",
+      "  (fc2): Linear(in_features=64, out_features=2, bias=True)\n",
       "  (softmax): Softmax(dim=1)\n",
       "  (swish): SwishActivation()\n",
       "  (batchNorm): BatchNorm1d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
@@ -121,7 +121,7 @@
     }
    ],
    "source": [
-    "model = SimpleNeuralNetwork(inputs = llf.get_features_size())\n",
+    "model = SimpleNeuralNetwork(inputs = train_dataset.get_input_size(), classes=2)\n",
     "\n",
     "# Check the model's architecture\n",
     "print(model)"
@@ -143,14 +143,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 30, Loss: 0.015433703656120701: 100%|██████████| 30/30 [00:58<00:00,  1.97s/it]"
+      "Epoch 30, Loss: 0.020660592171371037: 100%|██████████| 30/30 [00:41<00:00,  1.39s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on fos complete!\n"
+      "Training on glszm_features complete!\n"
      ]
     },
     {
@@ -171,9 +171,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall Accuracy: 63.72%\n",
+      "Class 0 Accuracy: 99.66%\n",
+      "Class 1 Accuracy: 4.78%\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'Accuracy: 71.7094017094017% On fos'"
+       "(63.723404255319146, [99.65753424657534, 4.775280898876404])"
       ]
      },
      "execution_count": 6,
