--- a/process_csv.ipynb
+++ b/process_csv.ipynb
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,11 +878,12 @@
     "\n",
     "# Define the column headers\n",
     "columns = ['features_name', 'nn_md', 'nn_nmd', 'random_forest_md', 'random_forest_nmd', \n",
-    "           'decision_tree_md', 'decision_tree_nmd', 'gradient_boost_md', 'gradient_boost_nmd']\n",
+    "           'decision_tree_md', 'decision_tree_nmd', 'gradient_boost_md', 'gradient_boost_nmd','xgboost_md', 'xgboost_nmd']\n",
     "\n",
     "# Generate 21 rows of random data (example with numbers for simplicity)\n",
     "data = {\n",
-    "    'features_name': [f'{i[\"function\"].__name__}' for i in param_list],\n",
+    "    # 'features_name': [f'{i[\"function\"].__name__}' for i in param_list],\n",
+    "    'features_name': [\"vip\"],\n",
     "    'nn_md': pd.NA,\n",
     "    'nn_nmd': pd.NA,\n",
     "    'random_forest_md': pd.NA,\n",
@@ -894,7 +895,8 @@
     "}\n",
     "\n",
     "data0 = {\n",
-    "    'features_name': [f'{i[\"function\"].__name__}_0' for i in param_list],\n",
+    "    # 'features_name': [f'{i[\"function\"].__name__}_0' for i in param_list],\n",
+    "    'features_name': [\"vip_0\"],\n",
     "    'nn_md': pd.NA,\n",
     "    'nn_nmd': pd.NA,\n",
     "    'random_forest_md': pd.NA,\n",
@@ -906,7 +908,8 @@
     "}\n",
     "\n",
     "data1 = {\n",
-    "    'features_name': [f'{i[\"function\"].__name__}_1' for i in param_list],\n",
+    "    # 'features_name': [f'{i[\"function\"].__name__}_1' for i in param_list],\n",
+    "    'features_name': [\"vip_1\"],\n",
     "    'nn_md': pd.NA,\n",
     "    'nn_nmd': pd.NA,\n",
     "    'random_forest_md': pd.NA,\n",
@@ -984,6 +987,214 @@
     "df2['nn_nmd'] = df1['nn_nmd']\n",
     "df2.to_csv(\"./ckpts/multiple_result.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./data/pfi_result.txt', 'r') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "overall_importance = []\n",
+    "overall_name = []\n",
+    "for line in lines:\n",
+    "    if len(line)==1:\n",
+    "        continue\n",
+    "    \n",
+    "    part = line.split(',')\n",
+    "    if len(part) != 2 :\n",
+    "        features_name = part[0].strip()\n",
+    "    else:\n",
+    "        features_id = part[0].strip()\n",
+    "        features_importance = float(part[1].strip())\n",
+    "\n",
+    "        overall_importance.append(features_importance)\n",
+    "        overall_name.append(f'{features_id}|{features_name}')\n",
+    "\n",
+    "    \n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({'name': overall_name, 'value': overall_importance})\n",
+    "\n",
+    "df.sort_values(by='value', ascending=False, inplace=True)\n",
+    "\n",
+    "top_10_df = df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>feature_0|fps</td>\n",
+       "      <td>0.085106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>feature_2|lte_measures</td>\n",
+       "      <td>0.053191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>feature_1|fps</td>\n",
+       "      <td>0.051064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>feature_9|swt_features</td>\n",
+       "      <td>0.036170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>feature_13|swt_features</td>\n",
+       "      <td>0.029787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>feature_0|fos</td>\n",
+       "      <td>0.027660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>feature_1|gt_features</td>\n",
+       "      <td>0.025532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317</th>\n",
+       "      <td>feature_11|gt_features</td>\n",
+       "      <td>0.023404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>feature_4|lte_measures</td>\n",
+       "      <td>0.019149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>feature_11|swt_features</td>\n",
+       "      <td>0.017021</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        name     value\n",
+       "79             feature_0|fps  0.085106\n",
+       "58    feature_2|lte_measures  0.053191\n",
+       "80             feature_1|fps  0.051064\n",
+       "172   feature_9|swt_features  0.036170\n",
+       "173  feature_13|swt_features  0.029787\n",
+       "0              feature_0|fos  0.027660\n",
+       "316    feature_1|gt_features  0.025532\n",
+       "317   feature_11|gt_features  0.023404\n",
+       "59    feature_4|lte_measures  0.019149\n",
+       "174  feature_11|swt_features  0.017021"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_10_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = []\n",
+    "\n",
+    "for name in top_10_df['name']:\n",
+    "    index = int(name.split('|')[0].split('_')[1])\n",
+    "    features = name.split('|')[1]\n",
+    "    \n",
+    "    train_df = pd.read_csv(f'./data/{features}/vaynen_train_{features}_new.csv')\n",
+    "    # test_df = pd.read_csv(f'./data/{features}/vaynen_test_{features}_new.csv')\n",
+    "\n",
+    "    columns.append(train_df.iloc[:,index+8])\n",
+    "    # columns.append(test_df.iloc[:,index+8])\n",
+    "\n",
+    "    # print(train_df.iloc[:,index+8].shape)\n",
+    "\n",
+    "final_df = pd.DataFrame(columns).T.reset_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.drop(columns=['index'], inplace=True)\n",
+    "final_df.columns = top_10_df['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"./data/fos/vaynen_train_fos_new.csv\").iloc[:, :8]\n",
+    "df = pd.concat([df, final_df], axis=1)\n",
+    "df.to_csv(\"./data/vip/vaynen_train_vip_new.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataFrame has NaN values: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"./data/vip/vaynen_test_vip_new.csv\")\n",
+    "print(\"DataFrame has NaN values:\", df.isnull().values.any())\n",
+    "# print(\"Number of rows with at least one NaN value:\", df[df.isnull().any(axis=1)].shape[0])\n",
+    "# print(\"Number of columns with at least one NaN value:\", df[df.isnull().any(axis=0)].shape[1])"
+   ]
   }
  ],
  "metadata": {
@@ -1002,7 +1213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
