--- a/process_csv.ipynb
+++ b/process_csv.ipynb
@@ -990,11 +990,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./data/pfi_result.txt', 'r') as f:\n",
+    "with open('./data/pfi_class1_result.txt', 'r') as f:\n",
     "    lines = f.readlines()\n",
     "\n",
     "overall_importance = []\n",
@@ -1021,12 +1021,12 @@
     "\n",
     "df.sort_values(by='value', ascending=False, inplace=True)\n",
     "\n",
-    "top_10_df = df.head(10)"
+    "top_10_df = df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1056,74 +1056,134 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>feature_1|lte_measures</td>\n",
+       "      <td>40.686275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>79</th>\n",
        "      <td>feature_0|fps</td>\n",
-       "      <td>0.085106</td>\n",
+       "      <td>23.039216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
+       "      <th>59</th>\n",
+       "      <td>feature_3|lte_measures</td>\n",
+       "      <td>21.568627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
        "      <td>feature_2|lte_measures</td>\n",
-       "      <td>0.053191</td>\n",
+       "      <td>12.254902</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>feature_1|fps</td>\n",
-       "      <td>0.051064</td>\n",
+       "      <th>44</th>\n",
+       "      <td>feature_2|glds_features</td>\n",
+       "      <td>10.344828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>172</th>\n",
        "      <td>feature_9|swt_features</td>\n",
-       "      <td>0.036170</td>\n",
+       "      <td>8.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>173</th>\n",
-       "      <td>feature_13|swt_features</td>\n",
-       "      <td>0.029787</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>feature_0|fos</td>\n",
-       "      <td>0.027660</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>316</th>\n",
-       "      <td>feature_1|gt_features</td>\n",
-       "      <td>0.025532</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>317</th>\n",
-       "      <td>feature_11|gt_features</td>\n",
-       "      <td>0.023404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>feature_4|lte_measures</td>\n",
-       "      <td>0.019149</td>\n",
+       "      <td>feature_7|swt_features</td>\n",
+       "      <td>7.843137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>174</th>\n",
+       "      <td>feature_6|swt_features</td>\n",
+       "      <td>7.352941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>feature_8|swt_features</td>\n",
+       "      <td>6.862745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>316</th>\n",
+       "      <td>feature_11|gt_features</td>\n",
+       "      <td>6.372549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
        "      <td>feature_11|swt_features</td>\n",
-       "      <td>0.017021</td>\n",
+       "      <td>5.392157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>feature_73|wp_features</td>\n",
+       "      <td>4.901961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>feature_2|lbp_features</td>\n",
+       "      <td>3.921569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>feature_5|swt_features</td>\n",
+       "      <td>3.921569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>feature_15|glcm_features</td>\n",
+       "      <td>3.448276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>317</th>\n",
+       "      <td>feature_13|gt_features</td>\n",
+       "      <td>3.431373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>191</th>\n",
+       "      <td>feature_93|wp_features</td>\n",
+       "      <td>3.431373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>feature_77|wp_features</td>\n",
+       "      <td>2.941176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>feature_51|wp_features</td>\n",
+       "      <td>2.941176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>feature_103|wp_features</td>\n",
+       "      <td>2.941176</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        name     value\n",
-       "79             feature_0|fps  0.085106\n",
-       "58    feature_2|lte_measures  0.053191\n",
-       "80             feature_1|fps  0.051064\n",
-       "172   feature_9|swt_features  0.036170\n",
-       "173  feature_13|swt_features  0.029787\n",
-       "0              feature_0|fos  0.027660\n",
-       "316    feature_1|gt_features  0.025532\n",
-       "317   feature_11|gt_features  0.023404\n",
-       "59    feature_4|lte_measures  0.019149\n",
-       "174  feature_11|swt_features  0.017021"
+       "                         name      value\n",
+       "58     feature_1|lte_measures  40.686275\n",
+       "79              feature_0|fps  23.039216\n",
+       "59     feature_3|lte_measures  21.568627\n",
+       "60     feature_2|lte_measures  12.254902\n",
+       "44    feature_2|glds_features  10.344828\n",
+       "172    feature_9|swt_features   8.333333\n",
+       "173    feature_7|swt_features   7.843137\n",
+       "174    feature_6|swt_features   7.352941\n",
+       "175    feature_8|swt_features   6.862745\n",
+       "316    feature_11|gt_features   6.372549\n",
+       "176   feature_11|swt_features   5.392157\n",
+       "190    feature_73|wp_features   4.901961\n",
+       "102    feature_2|lbp_features   3.921569\n",
+       "177    feature_5|swt_features   3.921569\n",
+       "16   feature_15|glcm_features   3.448276\n",
+       "317    feature_13|gt_features   3.431373\n",
+       "191    feature_93|wp_features   3.431373\n",
+       "192    feature_77|wp_features   2.941176\n",
+       "193    feature_51|wp_features   2.941176\n",
+       "194   feature_103|wp_features   2.941176"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,66 +1194,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = []\n",
+    "test_columns = []\n",
+    "train_columns = []\n",
     "\n",
     "for name in top_10_df['name']:\n",
     "    index = int(name.split('|')[0].split('_')[1])\n",
     "    features = name.split('|')[1]\n",
     "    \n",
     "    train_df = pd.read_csv(f'./data/{features}/vaynen_train_{features}_new.csv')\n",
-    "    # test_df = pd.read_csv(f'./data/{features}/vaynen_test_{features}_new.csv')\n",
+    "    test_df = pd.read_csv(f'./data/{features}/vaynen_test_{features}_new.csv')\n",
     "\n",
-    "    columns.append(train_df.iloc[:,index+8])\n",
-    "    # columns.append(test_df.iloc[:,index+8])\n",
+    "    train_columns.append(train_df.iloc[:,index+8])\n",
+    "    test_columns.append(test_df.iloc[:,index+8])\n",
     "\n",
     "    # print(train_df.iloc[:,index+8].shape)\n",
     "\n",
-    "final_df = pd.DataFrame(columns).T.reset_index()\n"
+    "vip_train_df = pd.DataFrame(train_columns).T.reset_index()\n",
+    "vip_test_df = pd.DataFrame(test_columns).T.reset_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.drop(columns=['index'], inplace=True)\n",
-    "final_df.columns = top_10_df['name']"
+    "vip_train_df.drop(columns=['index'], inplace=True)\n",
+    "vip_train_df.columns = top_10_df['name']\n",
+    "\n",
+    "vip_test_df.drop(columns=['index'], inplace=True)\n",
+    "vip_test_df.columns = top_10_df['name']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"./data/fos/vaynen_train_fos_new.csv\").iloc[:, :8]\n",
-    "df = pd.concat([df, final_df], axis=1)\n",
-    "df.to_csv(\"./data/vip/vaynen_train_vip_new.csv\", index=False)\n"
+    "df = pd.concat([df, vip_train_df], axis=1)\n",
+    "df.to_csv(\"./data/vip/vaynen_train_vip_new.csv\", index=False)\n",
+    "\n",
+    "df = pd.read_csv(\"./data/fos/vaynen_test_fos_new.csv\").iloc[:, :8]\n",
+    "df = pd.concat([df, vip_test_df], axis=1)\n",
+    "df.to_csv(\"./data/vip/vaynen_test_vip_new.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataFrame has NaN values: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data/vip/vaynen_test_vip_new.csv\")\n",
-    "print(\"DataFrame has NaN values:\", df.isnull().values.any())\n",
-    "# print(\"Number of rows with at least one NaN value:\", df[df.isnull().any(axis=1)].shape[0])\n",
-    "# print(\"Number of columns with at least one NaN value:\", df[df.isnull().any(axis=0)].shape[1])"
+    "from utils import *\n",
+    "import os\n",
+    "root_folder = \"./data/\"\n",
+    "image_folder = \"../../skin_data/\"\n",
+    "for param in param_list:\n",
+    "    llf = LowLevelFeatureExtractor(**param)\n",
+    "\n",
+    "    llf_name = llf.function.__name__\n",
+    "\n",
+    "    train_file = os.path.join(root_folder , llf_name, f\"vaynen_train_{llf_name}_new.csv\")\n",
+    "    test_file = os.path.join(root_folder , llf_name, f\"vaynen_test_{llf_name}_new.csv\")\n",
+    "    \n",
+    "    train_df = pd.read_csv(train_file)\n",
+    "    test_df = pd.read_csv(test_file)\n",
+    "\n",
+    "    train_image_col = train_df['image'].copy()\n",
+    "    test_image_col = test_df['image'].copy()\n",
+    "\n",
+    "    train_image_col = train_image_col.apply(lambda x: os.path.join(image_folder,x))    \n",
+    "    test_image_col = test_image_col.apply(lambda x: os.path.join(image_folder,x)) \n",
+    "\n",
+    "    filtered_train_df = train_df[train_image_col.apply(os.path.exists)]\n",
+    "    filtered_test_df = test_df[test_image_col.apply(os.path.exists)]\n",
+    "    \n",
+    "    # print(train_df.shape, filtered_train_df.shape)\n",
+    "    # print(test_df.shape, filtered_test_df.shape)\n",
+    "\n",
+    "    filtered_train_df.to_csv(train_file, index=False)\n",
+    "    filtered_test_df.to_csv(test_file, index=False)"
    ]
   }
  ],
