--- a/testing.ipynb
+++ b/testing.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "torch.Size([32, 0])\n",
-      "torch.Size([32, 16])\n",
+      "torch.Size([32, 10])\n",
       "torch.Size([32])\n"
      ]
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "SimpleNeuralNetwork(\n",
-      "  (fc1): Linear(in_features=16, out_features=64, bias=True)\n",
+      "  (fc1): Linear(in_features=10, out_features=64, bias=True)\n",
       "  (relu): ReLU()\n",
       "  (fc2): Linear(in_features=64, out_features=2, bias=True)\n",
       "  (softmax): Softmax(dim=1)\n",
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 30, Loss: 0.020660592171371037: 100%|██████████| 30/30 [00:41<00:00,  1.39s/it]"
+      "Epoch 30, Loss: 0.02094909849584156: 100%|██████████| 30/30 [00:49<00:00,  1.66s/it] "
      ]
     },
     {
@@ -167,25 +167,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overall Accuracy: 63.72%\n",
-      "Class 0 Accuracy: 99.66%\n",
-      "Class 1 Accuracy: 4.78%\n"
+      "Overall Accuracy: 62.13%\n",
+      "Class 0 Accuracy: 100.00%\n",
+      "Class 1 Accuracy: 0.00%\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(63.723404255319146, [99.65753424657534, 4.775280898876404])"
+       "(62.12765957446808, [100.0, 0.0])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,6 +796,32 @@
    "source": [
     "df.index = [p['function'].__name__ for p in param_list]  # No metadata result\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 100.0]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from utils import *\n",
+    "\n",
+    "df = pd.read_csv(\"./data/fos/vaynen_test_fos_new.csv\")\n",
+    "y_test = df.iloc[:,1].to_numpy()\n",
+    "y_pred = np.ones_like(y_test)\n",
+    "\n",
+    "process_confusion_matrix(y_test, y_pred)"
    ]
   }
  ],
