--- a/test.ipynb
+++ b/test.ipynb
@@ -24,103 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.tools import FilesProcessor\n",
+    "from utils.constant import param_list\n",
+    "\n",
+    "FilesProcessor.create_result_df(column_name=[\"nn\"], feature_name=[feat['function'].__name__ for feat in param_list], n_class=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nn</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>features_name</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>fos</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>glcm_features</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>glds_features</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ngtdm_features</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sfm_features</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>wp_features_2</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>gt_features_2</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>zernikes_moments_2</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>hu_moments_2</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>tas_features_2</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>88 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                     nn\n",
-       "features_name          \n",
-       "fos                 NaN\n",
-       "glcm_features       NaN\n",
-       "glds_features       NaN\n",
-       "ngtdm_features      NaN\n",
-       "sfm_features        NaN\n",
-       "...                 ...\n",
-       "wp_features_2       NaN\n",
-       "gt_features_2       NaN\n",
-       "zernikes_moments_2  NaN\n",
-       "hu_moments_2        NaN\n",
-       "tas_features_2      NaN\n",
-       "\n",
-       "[88 rows x 1 columns]"
+       "'10'"
       ]
      },
      "execution_count": 2,
@@ -129,10 +51,8 @@
     }
    ],
    "source": [
-    "from utils.tools import FilesProcessor\n",
-    "from utils.constant import param_list\n",
-    "\n",
-    "FilesProcessor.create_result_df(column_name=[\"nn\"], feature_name=[feat['function'].__name__ for feat in param_list], n_class=3)"
+    "p = \"{long}\"\n",
+    "p.format(long=10)"
    ]
   }
  ],
