--- a/test.ipynb
+++ b/test.ipynb
@@ -230,6 +230,49 @@
     "    img_type[ext] += 1\n",
     "print(img_type)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "400 files have been copied from Folder A to Folder B.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "import random\n",
+    "\n",
+    "# Define paths for Folder A and Folder B\n",
+    "folder_A = \"G:\\\\Code\\\\Dataset\\\\data_images_big\\\\test\\\\13\"\n",
+    "folder_B = \"G:\\\\Code\\\\Python\\\\vaynen_small\\\\test\\\\13\"\n",
+    "\n",
+    "# Get the list of files in Folder A\n",
+    "files_in_A = [f for f in os.listdir(folder_A) if os.path.isfile(os.path.join(folder_A, f))]\n",
+    "\n",
+    "# Ensure there are at least 400 files in Folder A\n",
+    "if len(files_in_A) < 200:\n",
+    "    print(\"Not enough files in Folder A to copy 400 files.\")\n",
+    "else:\n",
+    "    # Randomly select 400 files\n",
+    "    selected_files = random.sample(files_in_A, 100)\n",
+    "\n",
+    "    # Copy each selected file to Folder B\n",
+    "    for file in selected_files:\n",
+    "        source_path = os.path.join(folder_A, file)\n",
+    "        destination_path = os.path.join(folder_B, file)\n",
+    "\n",
+    "        # Copy the file\n",
+    "        shutil.copy(source_path, destination_path)\n",
+    "\n",
+    "    print(\"400 files have been copied from Folder A to Folder B.\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -248,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
